--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nanogiants/vue3-longpress": "^1.0.8",
+    "chart.js": "^4.5.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
