--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,6 @@
-FROM node:20
+FROM node:20 AS build
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
+RUN sh ./build.sh
