--- a/app/package.json
+++ b/app/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "vite --config vite.config.js",
+    "build:aws": "vite build --config vite.config.aws.js",
+    "build": "vite build --config vite.config.js",
     "preview": "vite preview"
   },
   "dependencies": {
