--- a/app/package.json
+++ b/app/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --config vite.config.js --mode local",
+  "dev": "vite --config vite.config.js --mode development",
     "build:aws": "vite build --config vite.config.aws.js --mode aws",
-    "build": "vite build --config vite.config.js --mode local",
+  "build": "vite build --config vite.config.js --mode development",
     "preview": "vite preview"
   },
   "dependencies": {
