--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,16 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_ROOT_HOST: ${MYSQL_ROOT_HOST}
       TZ: Asia/Tokyo
-    ports:
-      - "3307:3306"
+    # ports:
+    #   - "3307:3306"
+    volumes:
+      - db_data:/var/lib/mysql
+
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-uroot", "-p${MYSQL_ROOT_PASSWORD}"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
   server:
     build:
@@ -21,7 +29,8 @@ services:
       - "8080:8080"
     container_name: planarc_server
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
       AIR_WATCHER: polling
   app:
@@ -34,3 +43,6 @@ services:
       - "4173:4173"
     depends_on:
       - server
+
+volumes:
+  db_data:
