--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@event-calendar/core": "^4.6.0",
     "@nanogiants/vue3-longpress": "^1.0.8",
     "chart.js": "^4.5.0",
     "pinia": "^3.0.3",
