--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@nanogiants/vue3-longpress": "^1.0.8",
     "chart.js": "^4.5.0",
     "pinia": "^3.0.3",
+    "progressbar.js": "^1.1.1",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
