--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@event-calendar/core": "^4.6.0",
     "@nanogiants/vue3-longpress": "^1.0.8",
     "chart.js": "^4.5.0",
+    "element-plus": "^2.11.4",
     "pinia": "^3.0.3",
     "progressbar.js": "^1.1.1",
     "vue": "^3.5.17",
