--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 RUN go install github.com/air-verse/air@latest
 
 COPY go.mod go.sum ./
+ENV GOPROXY=https://proxy.golang.org,direct
 RUN go mod download
 
 COPY . .
