--- a/app/package.json
+++ b/app/package.json
@@ -14,10 +14,12 @@
     "@nanogiants/vue3-longpress": "^1.0.8",
     "chart.js": "^4.5.0",
     "element-plus": "^2.11.4",
+    "firebase": "^12.5.0",
     "pinia": "^3.0.3",
     "progressbar.js": "^1.1.1",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
